--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-beta.5",
-		"react-native": "0.49.3",
-		"react-native-scrollable-tab-view": "^0.8.0",
+		"react": "^16.0.0-alpha.12",
+		"react-native": "^0.48.4",
+		"react-native-scrollable-tab-view": "^0.7.4",
 		"react-native-swipe-cards": "^0.1.0",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.4.2",
