--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"react": "^16.0.0-alpha.12",
 		"react-native": "^0.48.4",
+		"react-native-parallax-scroll-view": "^0.20.1",
 		"react-native-scrollable-tab-view": "^0.7.4",
 		"react-native-swipe-cards": "^0.1.0",
 		"react-native-swiper": "^1.5.13",
