--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "^16.0.0-alpha.12",
+		"react": "16.0.0-alpha.12",
 		"react-native": "^0.48.4",
 		"react-native-parallax-scroll-view": "^0.20.1",
-		"react-native-scrollable-tab-view": "^0.7.4",
-		"react-native-swipe-cards": "^0.1.0",
+		"react-native-scrollable-tab-view": "^0.8.0",
+		"react-native-splash-screen": "^2.1.0",
+		"react-native-swipe-cards": "^0.1.1",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.4.2",
-		"react-navigation": "^1.0.0-beta.15"
+		"react-navigation": "^1.0.0-beta.21"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
-		"react-test-renderer": "16.0.0-beta.5"
+		"react-test-renderer": "16.0.0-beta.12"
 	},
 	"jest": {
 		"preset": "react-native"
