--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.48.4",
 		"react-native-parallax-scroll-view": "^0.20.1",
+		"react-native-photo-browser": "^0.4.0",
 		"react-native-scrollable-tab-view": "^0.8.0",
 		"react-native-splash-screen": "^2.1.0",
 		"react-native-swipe-cards": "^0.1.1",
