--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"react-native-parallax-scroll-view": "^0.20.1",
 		"react-native-photo-browser": "https://github.com/ksti/react-native-photo-browser.git",
 		"react-native-scrollable-tab-view": "^0.8.0",
-		"react-native-splash-screen": "^2.1.0",
+		"react-native-splash-screen": "^3.0.6",
 		"react-native-swipe-cards": "^0.1.1",
 		"react-native-swiper": "^1.5.13",
 		"react-native-vector-icons": "^4.4.2",
@@ -22,7 +22,7 @@
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
-		"react-test-renderer": "16.0.0-beta.0"
+		"react-test-renderer": "16.0.0-alpha.0"
 	},
 	"jest": {
 		"preset": "react-native"
