--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,7 +98,7 @@ android {
     buildToolsVersion "25.0.1"
 
     defaultConfig {
-        applicationId "com.ganknews"
+        applicationId "com.codersong.tooyue"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
