--- a/app/res/data/config.json
+++ b/app/res/data/config.json
@@ -17,7 +17,7 @@
     "currentRepoUrl": "https://api.github.com/repos/crazycodeboy/GitHubPopular"
   },
   "project": {
-    "name": "GankNews",
+    "name": "Tooyue",
     "description": "这是一个用来查看新闻与妹子的App,它基于React Native支持Android和iOS双平台。",
     "backgroundImg": "http://www.devio.org/io/GitHubPopular/img/for_githubpopular_about_me.jpg",
     "avatar1": "http://www.devio.org/io/GitHubPopular/img/ic_app.png",
