--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
 		"react-native": "^0.48.4",
 		"react-native-parallax-scroll-view": "^0.20.1",
 		"react-native-photo-browser": "https://github.com/ksti/react-native-photo-browser.git",
-		"react-native-scrollable-tab-view": "^0.8.0",
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swipe-cards": "^0.1.1",
 		"react-native-swiper": "^1.5.13",
+		"react-native-tab-view": "^0.0.73",
 		"react-native-vector-icons": "^4.4.2",
 		"react-navigation": "^1.0.0-beta.21"
 	},
