--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.css linguist-language=js
 *.less linguist-language=js
-*.objective-c linguist-language=js
+*.m linguist-language=js
+*.h linguist-language=js
 *.html linguist-language=js
