--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -115,13 +115,33 @@ android {
             include "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        debug {
+            storeFile file('my-release-key.keystore')
+            storePassword "dingdang"
+            keyAlias "my-key-alias"
+            keyPassword "dingdang"
+        }
+        release {
+            storeFile file('my-release-key.keystore')
+            storePassword "dingdang"
+            keyAlias "my-key-alias"
+            keyPassword "dingdang"
+        }
+    }
+
     buildTypes {
+        debug {
+                minifyEnabled false
+                signingConfig signingConfigs.debug
+            }
         release {
             // 是否压缩
             zipAlignEnabled true
             //是否调试
             debuggable false
             minifyEnabled enableProguardInReleaseBuilds
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
@@ -159,6 +179,8 @@ dependencies {
     compile files('libs/alicloud-android-monitor-2.5.1.1_for_bc_proguard.jar')
     compile files('libs/utdid4all-1.1.5.3_proguard.jar')
     compile files('libs/alicloud-android-utils-1.1.1.jar')
+    //share
+    compile project(':u_share')
 }
 
 // Run this once to be able to run the application with BUCK
