--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,3 +8,4 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 include ':react-native-splash-screen'
 project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
 include ':app'
+include ':u_share'
